mds: remove "mds log" config option

This was occasionally useful for establishing a journal-less
performance baseline, but it has two big problems:
* We don't test it, so it's probably broken a lot of the time
* It sounds a lot to a naive user like an option for controlling
  logging.

IMO, anyone who wants this behaviour is in sufficiently advanced
territory that then can hack it in and recompile, we don't need
to leave dangerous things like this in our releases.

Fixes: http://tracker.ceph.com/issues/18816
Signed-off-by: John Spray <john.spray@redhat.com>